tests/snapshots/errors/pop_empty_array.mc
let v: vec<any> = vec::`new`();
let x = v.pop();
print(debug(x));
